modules/security-groups/main.tf
resource "aws_security_group" "instance" {
  name   = "instance-sg"
  vpc_id = var.vpc_id

  ingress {
    description      = "Open Server port"
    from_port        = 10999
    to_port          = 10999
    protocol         = "UDP"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  ingress {
    description      = "Open SSH port"
    from_port        = 22
    to_port          = 22
    protocol         = "TCP"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }
}
